--- a/features/form.yml.dist
+++ b/features/form.yml.dist
@@ -169,8 +169,9 @@ compat_features:
   #   safari_ios: "15.4"
   - api.SubmitEvent.submitter
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "76"
   #   chrome_android: "76"
