--- a/features/show-picker-input.yml.dist
+++ b/features/show-picker-input.yml.dist
@@ -11,8 +11,9 @@ status:
     firefox_android: "101"
     safari: "17.4"
 compat_features:
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "99"
   #   chrome_android: "99"
