--- a/features/class-syntax.yml.dist
+++ b/features/class-syntax.yml.dist
@@ -123,8 +123,9 @@ compat_features:
   #   safari_ios: "15"
   - javascript.classes.private_class_fields_in
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "72"
   #   chrome_android: "72"
