--- a/features/csp.yml.dist
+++ b/features/csp.yml.dist
@@ -297,8 +297,9 @@ compat_features:
   #   safari_ios: "15.5"
   - html.global_attributes.nonce.nonce_hiding
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "97"
   #   chrome_android: "97"
