--- a/features/flexbox.yml.dist
+++ b/features/flexbox.yml.dist
@@ -308,8 +308,9 @@ compat_features:
   #   safari_ios: "15.6"
   - css.properties.align-content.flex_context.start_end
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "94"
   #   chrome_android: "94"
@@ -321,8 +322,9 @@ compat_features:
   - css.properties.flex-basis.max-content
   - css.properties.flex-basis.min-content
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "94"
   #   chrome_android: "94"
