--- a/features/geolocation.yml.dist
+++ b/features/geolocation.yml.dist
@@ -87,8 +87,9 @@ compat_features:
   - api.GeolocationPositionError.message
   - api.GeolocationPositionError.secure_context_required
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "43"
   #   chrome_android: "43"
