--- a/features/path-shape.yml.dist
+++ b/features/path-shape.yml.dist
@@ -31,8 +31,9 @@ compat_features:
   #   safari_ios: "13"
   - css.types.basic-shape.path.clip-path
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "56"
   #   chrome_android: "56"
