--- a/features/script.yml.dist
+++ b/features/script.yml.dist
@@ -139,8 +139,9 @@ compat_features:
   - api.HTMLScriptElement.integrity
   - html.elements.script.integrity
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "96"
   #   chrome_android: "96"
