--- a/features/service-workers.yml.dist
+++ b/features/service-workers.yml.dist
@@ -418,8 +418,9 @@ compat_features:
   #   safari_ios: "11.3"
   - api.caches.secure_context_required
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "49"
   #   chrome_android: "49"
@@ -430,8 +431,9 @@ compat_features:
   #   safari_ios: "16"
   - api.WindowClient.navigate
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "72"
   #   chrome_android: "72"
@@ -442,8 +444,9 @@ compat_features:
   #   safari_ios: "16"
   - api.FetchEvent.resultingClientId
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "86"
   #   chrome_android: "86"
