--- a/features/speech-synthesis.yml.dist
+++ b/features/speech-synthesis.yml.dist
@@ -75,8 +75,9 @@ compat_features:
   - api.SpeechSynthesisErrorEvent
   - api.SpeechSynthesisErrorEvent.error
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "33"
   #   chrome_android: "33"
@@ -88,8 +89,9 @@ compat_features:
   - api.SpeechSynthesis.voiceschanged_event
   - api.SpeechSynthesisEvent.utterance
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "71"
   #   chrome_android: "71"
@@ -100,8 +102,9 @@ compat_features:
   #   safari_ios: "16"
   - api.SpeechSynthesisEvent.SpeechSynthesisEvent
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "71"
   #   chrome_android: "71"
@@ -112,8 +115,9 @@ compat_features:
   #   safari_ios: "16"
   - api.SpeechSynthesisErrorEvent.SpeechSynthesisErrorEvent
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "77"
   #   chrome_android: "77"
