--- a/features/textarea.yml.dist
+++ b/features/textarea.yml.dist
@@ -234,8 +234,9 @@ compat_features:
   - api.HTMLTextAreaElement.autocomplete
   - html.elements.textarea.autocomplete
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "36"
   #   chrome_android: "36"
