--- a/features/web-animations.yml.dist
+++ b/features/web-animations.yml.dist
@@ -188,8 +188,9 @@ compat_features:
   - api.KeyframeEffect.pseudoElement
   - api.ShadowRoot.getAnimations
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-12
+  # baseline_high_date: 2025-03-12
   # support:
   #   chrome: "84"
   #   chrome_android: "84"
