Changed feature name

--- a/features/table-discouraged.yml
+++ b/features/table-discouraged.yml
@@ -1,4 +1,4 @@
-name: Tables
+name: Table styling
 description: Attributes and properties of table elements, such as `align`, `vAlign`, `noWrap`, `bgcolor`, or `char` set various visual presentation properties of the table and its sections and cells. These are obsolete, and some of them have no effect. Use CSS instead.
 spec: https://html.spec.whatwg.org/multipage/obsolete.html
 group: html-elements
