--- a/features/customizable-select.yml
+++ b/features/customizable-select.yml
@@ -5,7 +5,7 @@ group:
   - forms
   - html-elements
 compat_features:
-  - css.properties.appearance.base
+  - css.properties.appearance.base-select
   - css.selectors.checkmark
   - css.selectors.picker-icon
   - css.selectors.picker
