--- a/features/font-loading.yml.dist
+++ b/features/font-loading.yml.dist
@@ -93,8 +93,9 @@ compat_features:
   #   safari_ios: "11.3"
   - api.FontFace.display
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-20
+  # baseline_high_date: 2025-03-20
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
