--- a/features/streams.yml.dist
+++ b/features/streams.yml.dist
@@ -224,8 +224,9 @@ compat_features:
   - api.TransformStreamDefaultController.error
   - api.TransformStreamDefaultController.terminate
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-09-20
+  # baseline_high_date: 2025-03-20
   # support:
   #   chrome: "71"
   #   chrome_android: "71"
