--- a/features/active-view-transition.yml.dist
+++ b/features/active-view-transition.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "125"
     chrome_android: "125"
     edge: "125"
+    safari: "18.2"
+    safari_ios: "18.2"
 compat_features:
   # baseline: false
   # support:
@@ -17,6 +19,7 @@ compat_features:
   #   safari_ios: "18"
   - css.selectors.active-view-transition
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "125"
@@ -36,11 +39,4 @@ compat_features:
   - api.ViewTransitionTypeSet.keys
   - api.ViewTransitionTypeSet.size
   - api.ViewTransitionTypeSet.values
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support:
-  #   chrome: "125"
-  #   chrome_android: "125"
-  #   edge: "125"
   - css.selectors.active-view-transition-type
