Adjust descriptions for boolean and read-only properties
- Lowercase boolean, except "Boolean value" in json.yml
- Don't say which properties are read-only
- Don't say that a property returns something, say what the value is

--- a/features/device-memory.yml
+++ b/features/device-memory.yml
@@ -1,5 +1,5 @@
 name: Device memory
-description: The `navigator.deviceMemory` property returns the approximate amount of device memory, in gigabytes.
+description: The `navigator.deviceMemory` property is the approximate amount of device memory, in gigabytes.
 spec: https://www.w3.org/TR/device-memory/
 compat_features:
   - api.Navigator.deviceMemory
