--- a/features/hardware-concurrency.yml
+++ b/features/hardware-concurrency.yml
@@ -1,5 +1,5 @@
 name: hardwareConcurrency
-description: "The `navigator.hardwareConcurrency` read-only property returns the number of logical processors available to run threads on the user's computer."
+description: "The `navigator.hardwareConcurrency` property is the number of logical processors available to run threads on the user's computer."
 spec: https://html.spec.whatwg.org/multipage/workers.html#navigator.hardwareconcurrency
 caniuse: hardwareconcurrency
 compat_features:
