--- a/features/cookie-enabled.yml
+++ b/features/cookie-enabled.yml
@@ -1,5 +1,5 @@
 name: cookieEnabled
-description: "The `navigator.cookieEnabled` property returns a Boolean value for whether the browser accepts or ignores attempts to write cookie data."
+description: "The `navigator.cookieEnabled` property is a boolean for whether the browser accepts or ignores attempts to write cookie data."
 spec: https://html.spec.whatwg.org/multipage/system-state.html#cookies
 compat_features:
   - api.Navigator.cookieEnabled
