Pin CSS numeric factory functions to the earliest ones
New units keep being added to the platform, but it's not reasonable for
this feature to keep changing in response.

Note that the versions now match CSS Typed OM exactly, which makes sense
since this is really part of that feature.

--- a/features/numeric-factory-functions.yml
+++ b/features/numeric-factory-functions.yml
@@ -2,6 +2,8 @@ name: Numeric factory functions
 description: The numeric factory functions, such as `CSS.px()` or `CSS.kHz()`, return a `CSSUnitValue` representing a CSS number value (as in `12px` or `440kHz`).
 spec: https://drafts.css-houdini.org/css-typed-om-1/#numeric-factory
 group: cssom
+status:
+  compute_from: api.CSS.px_static
 compat_features:
   - api.CSS.Hz_static
   - api.CSS.Q_static
