follow BCD's namespace change for web app manifest keys

--- a/features/app-file-handlers.yml
+++ b/features/app-file-handlers.yml
@@ -3,5 +3,5 @@ description: The `file_handlers` web app manifest member registers an installed 
 spec: https://wicg.github.io/manifest-incubations/#file_handlers-member
 group: progressive-web-app
 compat_features:
-  - html.manifest.file_handlers
+  - manifests.webapp.file_handlers
   - api.LaunchParams.files
