--- a/features/app-launch-handler.yml
+++ b/features/app-launch-handler.yml
@@ -8,5 +8,5 @@ compat_features:
   - api.LaunchQueue
   - api.LaunchQueue.setConsumer
   - api.Window.launchQueue
-  - html.manifest.launch_handler
-  - html.manifest.launch_handler.client_mode
+  - manifests.webapp.launch_handler
+  - manifests.webapp.launch_handler.client_mode
