--- a/features/app-shortcuts.yml
+++ b/features/app-shortcuts.yml
@@ -3,4 +3,4 @@ description: The `shortcuts` web app manifest member registers common actions of
 spec: https://w3c.github.io/manifest/#shortcuts-member
 group: progressive-web-app
 compat_features:
-  - html.manifest.shortcuts
+  - manifests.webapp.shortcuts
