--- a/features/window-controls-overlay.yml
+++ b/features/window-controls-overlay.yml
@@ -16,4 +16,4 @@ compat_features:
   - css.types.env.titlebar-area-width
   - css.types.env.titlebar-area-x
   - css.types.env.titlebar-area-y
-  - html.manifest.display_override.window-controls-overlay
+  - manifests.webapp.display_override.window-controls-overlay
