--- a/features/app-share-targets.yml
+++ b/features/app-share-targets.yml
@@ -3,4 +3,4 @@ description: The `share_target` web app manifest member registers an installed w
 spec: https://w3c.github.io/web-share-target/#share_target-member
 group: progressive-web-app
 compat_features:
-  - html.manifest.share_target
+  - manifests.webapp.share_target
