Re-gen dist files

--- a/features/app-file-handlers.yml.dist
+++ b/features/app-file-handlers.yml.dist
@@ -8,4 +8,4 @@ status:
     edge: "102"
 compat_features:
   - api.LaunchParams.files
-  - html.manifest.file_handlers
+  - manifests.webapp.file_handlers
