--- a/features/app-share-targets.yml.dist
+++ b/features/app-share-targets.yml.dist
@@ -8,4 +8,4 @@ status:
     chrome_android: "76"
     edge: "89"
 compat_features:
-  - html.manifest.share_target
+  - manifests.webapp.share_target
