--- a/features/window-controls-overlay.yml.dist
+++ b/features/window-controls-overlay.yml.dist
@@ -22,7 +22,7 @@ compat_features:
   #   chrome: "105"
   #   chrome_android: "105"
   #   edge: "105"
-  - html.manifest.display_override.window-controls-overlay
+  - manifests.webapp.display_override.window-controls-overlay
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
