--- a/features/manifest.yml.dist
+++ b/features/manifest.yml.dist
@@ -19,7 +19,7 @@ compat_features:
   #   firefox_android: "47"
   #   safari: "17"
   #   safari_ios: "11.3"
-  - html.manifest.display
+  - manifests.webapp.display
 
   # baseline: false
   # support:
@@ -39,9 +39,9 @@ compat_features:
   #   firefox_android: "79"
   #   safari: "17"
   #   safari_ios: "11.3"
-  - html.manifest.name
-  - html.manifest.short_name
-  - html.manifest.start_url
+  - manifests.webapp.name
+  - manifests.webapp.short_name
+  - manifests.webapp.start_url
 
   # baseline: false
   # support:
@@ -51,7 +51,7 @@ compat_features:
   #   firefox_android: "79"
   #   safari: "17"
   #   safari_ios: "15.4"
-  - html.manifest.icons
+  - manifests.webapp.icons
 
   # baseline: false
   # support:
@@ -61,7 +61,7 @@ compat_features:
   #   firefox_android: "79"
   #   safari: "17"
   #   safari_ios: "15"
-  - html.manifest.theme_color
+  - manifests.webapp.theme_color
 
   # baseline: false
   # support:
@@ -71,7 +71,7 @@ compat_features:
   #   firefox_android: "79"
   #   safari: "17"
   #   safari_ios: "11.3"
-  - html.manifest.scope
+  - manifests.webapp.scope
 
   # baseline: false
   # support:
@@ -80,7 +80,7 @@ compat_features:
   #   edge: "96"
   #   safari: "17"
   #   safari_ios: "16.4"
-  - html.manifest.id
+  - manifests.webapp.id
 
   # baseline: false
   # support:
@@ -88,7 +88,7 @@ compat_features:
   #   chrome_android: "39"
   #   edge: "79"
   #   firefox_android: "79"
-  - html.manifest.orientation
+  - manifests.webapp.orientation
 
   # baseline: false
   # support:
@@ -96,21 +96,21 @@ compat_features:
   #   chrome_android: "46"
   #   edge: "79"
   #   firefox_android: "79"
-  - html.manifest.background_color
+  - manifests.webapp.background_color
 
   # baseline: false
   # support:
   #   chrome: "70"
   #   chrome_android: "70"
   #   edge: "79"
-  - html.manifest.serviceworker
-  - html.manifest.serviceworker.scope
-  - html.manifest.serviceworker.src
-  - html.manifest.serviceworker.use_cache
+  - manifests.webapp.serviceworker
+  - manifests.webapp.serviceworker.scope
+  - manifests.webapp.serviceworker.src
+  - manifests.webapp.serviceworker.use_cache
 
   # baseline: false
   # support:
   #   chrome: "88"
   #   chrome_android: "88"
   #   edge: "88"
-  - html.manifest.description
+  - manifests.webapp.description
